--- a/src/app/site/site.component.html
+++ b/src/app/site/site.component.html
@@ -1,3 +1,4 @@
-{{component.dynamic}}
-<br>
+<div [innerHTML]="component.template | safe: 'html' "></div>
+<ngx-spinner bdColor="rgba(51,51,51,0.8)" size="medium" color="#fff" type="ball-scale-multiple">
+</ngx-spinner>
 <router-outlet></router-outlet>
