:construction: Improved DynamicTemplateDirective

--- a/src/app/site/pages/campaign/campaign.page.html
+++ b/src/app/site/pages/campaign/campaign.page.html
@@ -1,1 +1,1 @@
-<html-outlet [html]="component.template"></html-outlet>
+<html-outlet [template]="component.template" [script]="component.script" [style]="component.style"></html-outlet>
