--- a/src/app/site/pages/campaign/campaign.page.html
+++ b/src/app/site/pages/campaign/campaign.page.html
@@ -1,1 +1,3 @@
-<html-outlet [template]="component.template" [script]="component.script" [style]="component.style"></html-outlet>
+<app-site-sidebar [data]="component.data"></app-site-sidebar>
+<html-outlet *ngIf="show" [template]="component.template" [script]="component.script" [style]="component.style">
+</html-outlet>
