--- a/src/styles.scss
+++ b/src/styles.scss
@@ -2,3 +2,8 @@
 
 /* Importing Bootstrap SCSS file. */
 @import '~bootstrap/scss/bootstrap';
+
+.my-code-editor {
+    height: 50vh !important;
+}
+  
