--- a/src/app/site/site.component.html
+++ b/src/app/site/site.component.html
@@ -1,4 +1,15 @@
-<div [innerHTML]="component.template | safe: 'html' "></div>
-<ngx-spinner bdColor="rgba(51,51,51,0.8)" size="medium" color="#fff" type="ball-scale-multiple">
-</ngx-spinner>
-<router-outlet></router-outlet>
+<div class="container-fluid">
+    <div class="d-flex justify-content-center text-white mt-5">
+        <h3>Dynamic pages storage in Firebase and render with Angular</h3>
+    </div>
+    <div class="row">
+        <div *ngFor="let page of pages" class="col-md-3 mt-5">
+            <div class="card">
+                <div class="card-body">
+                    <h5 class="card-title text-center">{{ page }}</h5>
+                    <a href="/{{page}}" class="btn btn-success btn-block">Go to page</a>
+                </div>
+            </div>
+        </div>
+    </div>
+</div>
