--- a/src/app/site/pages/dynamic/dynamic.page.html
+++ b/src/app/site/pages/dynamic/dynamic.page.html
@@ -1,3 +1,3 @@
-<app-site-sidebar *ngIf="show" [data]="component.data"></app-site-sidebar>
+<app-site-sidebar *ngIf="show" [data]="component.data" [versions]="versions"></app-site-sidebar>
 <html-outlet *ngIf="show" [template]="component.template" [script]="component.script" [style]="component.style">
 </html-outlet>
